--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,10 @@ CORS_ALLOWED_HEADERS=Content-Type,Accept,Authorization,X-Requested-With,X-API-Ke
 CORS_EXPOSED_HEADERS=Link,X-RateLimit-Limit,X-RateLimit-Remaining,X-RateLimit-Reset,Trace-Id
 CORS_ALLOW_CREDENTIALS=false
 CORS_MAX_AGE=86400
+
+# Z-API
+ZAPI_BASE_URL=https://api.z-api.io
+ZAPI_INSTANCE=
+ZAPI_TOKEN=
+ZAPI_CLIENT_TOKEN=
+ZAPI_TIMEOUT=30
