--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,11 @@
     "start": "php -S localhost:8080 -t public",
     "post-install-cmd": [
       "@php -r \"if(!is_dir('var/logs')) mkdir('var/logs', 0777, true);\""
-    ]
+    ],
+    "openapi:build": "vendor/bin/openapi --format json --output public/openapi.json app config"
+  },
+  "require-dev": {
+    "zircote/swagger-php": "^4.10",
+    "league/openapi-psr7-validator": "^0.16"
   }
 }
