--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,9 @@ RATE_LIMIT_PER_MINUTE=60
 CRM_BASE_URL=https://api.evydencia.com
 CRM_TOKEN=
 
+# Reports
+REPORT_PHOTOS_READY_STATUS_SLUGS=
+
 CORS_ALLOWED_ORIGINS=*
 CORS_ALLOWED_METHODS=GET,POST,PUT,PATCH,DELETE,OPTIONS
 CORS_ALLOWED_HEADERS=Content-Type,Accept,Authorization,X-Requested-With,X-API-Key
