--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,7 @@ CRM_TOKEN=
 # Reports
 REPORT_PHOTOS_READY_STATUS_SLUGS=
 
-CORS_ALLOWED_ORIGINS=*
+CORS_ALLOWED_ORIGINS=https://gestao.fotosdenatal.com,https://panfleto.fotosdenatal.com
 CORS_ALLOWED_METHODS=GET,POST,PUT,PATCH,DELETE,OPTIONS
 CORS_ALLOWED_HEADERS=Content-Type,Accept,Authorization,X-Requested-With,X-API-Key
 CORS_EXPOSED_HEADERS=Link,X-RateLimit-Limit,X-RateLimit-Remaining,X-RateLimit-Reset,Trace-Id
