--- a/docs/openapi/schools.yaml
+++ b/docs/openapi/schools.yaml
@@ -897,16 +897,52 @@ paths:
       tags: [Escolas]
       summary: Lista escolas com filtros
       parameters:
-        - { in: query, name: page, schema: { type: integer, minimum: 1 } }
-        - { in: query, name: per_page, schema: { type: integer, minimum: 1, maximum: 100 } }
-        - { in: query, name: fetch, schema: { type: string, enum: [all] } }
-        - { in: query, name: search, schema: { type: string } }
-        - { in: query, name: sort, schema: { type: string, example: "panfletagem,-total_alunos" } }
-        - { in: query, name: filter[cidade_id][], schema: { type: integer } }
-        - { in: query, name: filter[bairro_id][], schema: { type: integer } }
-        - { in: query, name: filter[tipo][], schema: { type: string } }
-        - { in: query, name: filter[status], schema: { type: string, enum: [pendente, feito, todos] } }
-        - { in: query, name: filter[periodos][], schema: { $ref: '#/components/schemas/Periodo' } }
+        - in: query
+          name: page
+          schema:
+            type: integer
+            minimum: 1
+        - in: query
+          name: per_page
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+        - in: query
+          name: fetch
+          schema:
+            type: string
+            enum: [all]
+        - in: query
+          name: search
+          schema:
+            type: string
+        - in: query
+          name: sort
+          schema:
+            type: string
+            example: panfletagem,-total_alunos
+        - in: query
+          name: filter[cidade_id][]
+          schema:
+            type: integer
+        - in: query
+          name: filter[bairro_id][]
+          schema:
+            type: integer
+        - in: query
+          name: filter[tipo][]
+          schema:
+            type: string
+        - in: query
+          name: filter[status]
+          schema:
+            type: string
+            enum: [pendente, feito, todos]
+        - in: query
+          name: filter[periodos][]
+          schema:
+            $ref: '#/components/schemas/Periodo'
       responses:
         '200':
           description: Lista paginada de escolas
