--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,10 @@ ZAPI_INSTANCE=
 ZAPI_TOKEN=
 ZAPI_CLIENT_TOKEN=
 ZAPI_TIMEOUT=30
+
+# Media status
+GAME_STATUS_URL=https://game.fotosdenatal.com/status.php
+GALLERY_STATUS_URL=https://galeria.fotosdenatal.com/status.php
+MEDIA_STATUS_CACHE_TTL=60
+MEDIA_STATUS_TIMEOUT=8
+MEDIA_STATUS_RETRIES=1
